[package]
name = "near-gas"
version = "0.3.2"
edition = "2021"
authors = [
    "Serhieiev Ivan <serhieievivan6@gmail.com>",
    "Vlad Frolov <frolvlad@gmail.com>",
]
repository = "https://github.com/near/near-gas"
rust-version = "1.68.0"
categories = ["parser-implementations", "value-formatting", "no-std"]
license = "MIT OR Apache-2.0"
description = "a small crate to work with NEAR Gas unit values ergonomically and efficiently (NEAR Protocol)"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
borsh = { version = "1", features = ["derive"], optional = true }
schemars-v1 = { version = "1.0.3", optional = true, package = "schemars" }
schemars-v0_8 = { version = "0.8.22", optional = true, package = "schemars" }
interactive-clap = { version = ">=0.2,<0.4", optional = true }

[dev-dependencies]
serde_json = { version = "1" }

[features]
abi = ["borsh/unstable__schema", "schemars"]
serde = ["dep:serde"]
interactive-clap = ["dep:interactive-clap"]
borsh = ["dep:borsh"]
schemars = ["schemars-v0_8"]
schemars-v1 = ["dep:schemars-v1"]
schemars-v0_8 = ["dep:schemars-v0_8"] 
